# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  linter-check.yml
brain_games/: __init__.py  cli.py
brain_games/scripts/: __init__.py  brain_even.py  main.py
