[tool.poetry]
name = "hexlet-code"
version = "0.1.3"
description = ""
authors = ["Groblin <lebedivanm@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
brain-games = "^0.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

